--- a/atividades/kaggle_author.Rmd
+++ b/atividades/kaggle_author.Rmd
@@ -6,6 +6,8 @@ output: html_notebook
 #Lê dados
 require(readr);
 contratos <- read_csv("dados/author.csv");
+contratos <- contratos[1:500,]
+
 
 #Gera corpus para a coluna Objeto
 require(quanteda)
@@ -29,11 +31,9 @@ require(caret)
 
 #Extrai coluna Modalidade da Licitação
 modalidades <- data.matrix(contratos$'author')
+y <- make.names(modalidades, unique = FALSE, allow_ = TRUE)
 
 #Converte para numérico
-for (row in 1:nrow(modalidades)) {
-    modalidades[row] <- substring(modalidades[row], 1, 1);
-}
 modalidades <- as.factor(modalidades);
 
 #Define porcentagem dos dados para treino
@@ -47,7 +47,8 @@ trainCtrlBag <- trainControl(method="repeatedcv", number = 2, repeats = 1, class
 
 tunegrid <- expand.grid(.mfinal = 1, .maxdepth = c(5:10))
 
-model.adabag.1 <- train(x_treino, y_treino, method="AdaBag", tuneGrid=tunegrid, trControl=trainCtrlBag)
 
-pred.test.adabag <- predict.train(model.adabag.1, x_teste)
-confusionMatrix(table(pred.test.adabag, y_teste))
+model.adabag.1 <- train(indice_tfidf[treino], modalidades[treino], method="AdaBag", tuneGrid=tunegrid, trControl=trainCtrlBag)
+
+pred.test.adabag <- predict.train(model.adabag.1, indice_tfidf[-treino])
+confusionMatrix(table(pred.test.adabag,  modalidades[-treino]))
